--- a/styles/output.css
+++ b/styles/output.css
@@ -2610,6 +2610,10 @@ body{
   background-color: #f6f7f8;
 }
 
+#close-modal-btn:active{
+  color: #EF4444;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
